# AgentArena

./: .gitignore  CLAUDE.md  HANDOFF.md
arena/: pyproject.toml
arena/baseline/src/agent/: __init__.py  core.py
arena/seed_challenges/001_smart_cache/: challenge.yaml
arena/seed_challenges/001_smart_cache/tests/: test_solution.py
arena/seed_challenges/002_expression_eval/: challenge.yaml
arena/seed_challenges/002_expression_eval/tests/: test_solution.py
arena/seed_challenges/003_schema_validator/: challenge.yaml
arena/seed_challenges/003_schema_validator/tests/: test_solution.py
arena/seed_challenges/add_two_numbers/: challenge.yaml
arena/seed_challenges/longest_common_prefix/: challenge.yaml
arena/seed_challenges/longest_palindromic_substring/: challenge.yaml
arena/seed_challenges/longest_substring_without_repeating_characters/: challenge.yaml
arena/seed_challenges/median_of_two_sorted_arrays/: challenge.yaml
arena/seed_challenges/merge_k_sorted_lists/: challenge.yaml
arena/seed_challenges/palindrome_number/: challenge.yaml
arena/seed_challenges/regular_expression_matching/: challenge.yaml
arena/seed_challenges/reverse_integer/: challenge.yaml
arena/seed_challenges/roman_to_integer/: challenge.yaml
arena/seed_challenges/two_sum/: challenge.yaml
arena/seed_challenges/valid_parentheses/: challenge.yaml
arena/seed_challenges/zigzag_conversion/: challenge.yaml
arena/src/arena/: __init__.py  agent.py  challenges.py  cli.py  display.py  harness.py  leetcode.py  llm.py  models.py  mutator.py
(+13 files in other folders)
